--- a/scss/style.css
+++ b/scss/style.css
@@ -10,19 +10,22 @@
   inline-size: 500px;
   overflow-wrap: break-word;
 }
+
 .hero-content div p {
   inline-size: 500px;
   overflow-wrap: break-word;
 }
 
-.btn-secondary, .btn-primary {
+.btn-primary, .btn-secondary {
   display: inline-block;
   border-radius: 5px;
   padding: 8px 20px;
   margin: 3px;
 }
-.btn-secondary:hover, .btn-primary:hover {
-  transform: scale(0.8);
+
+.btn-primary:hover, .btn-secondary:hover {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
 }
 
 .btn-primary {
@@ -47,13 +50,15 @@
   inline-size: 500px;
   overflow-wrap: break-word;
 }
+
 .hero-content div p {
   inline-size: 500px;
   overflow-wrap: break-word;
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -76,25 +81,30 @@ a {
   background-color: black;
   color: white;
 }
+
 .hero img {
   margin-left: 520px;
   max-width: 500px;
   height: auto;
   margin-top: -370px;
 }
+
 .hero nav h1 {
   margin-top: 20px;
   margin-bottom: -20px;
 }
+
 .hero nav ul {
   list-style-type: none;
   margin-left: 500px;
 }
+
 .hero nav ul li {
   display: inline-block;
   margin-bottom: 120px;
   padding-right: 25px;
 }
+
 .hero nav ul li a {
   color: white;
 }
@@ -178,5 +188,4 @@ a {
 .py-5 {
   padding: 5rem 0;
 }
-
 /*# sourceMappingURL=style.css.map */
