--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+@import "_btnConfig";
+@import "_utilities";
 
 * {
   box-sizing: border-box;
@@ -20,6 +22,33 @@ a {
 }
 
 .hero {
+
+  @include set-bg(black);
+  img{
+    margin-left: 520px;
+    max-width: 500px;
+    height: auto;
+    margin-top: -370px;
+  }
+  nav {
+    h1{
+      margin-top: 20px;
+      margin-bottom: -20px;
+    }
+    ul {
+      list-style-type: none;
+      margin-left: 500px;
+      li{
+        display: inline-block;
+        margin-bottom: 120px;
+        padding-right: 25px;
+        a {
+          color: white;
+        }
+      }
+      
+    }
+  }
   // This is where the bulk of the SCSS styling needs to be done
 
   // Take a look at the other files we've built already. How can they be useful here?
